--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -373,7 +373,7 @@
     }
    ],
    "source": [
-    "# Train model mothod #3 - random forest\n",
+    "# Train model method #3 - random forest\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "vectorizer = CountVectorizer(analyzer = \"word\", tokenizer = None, preprocessor = None, stop_words = None, max_features = 6000) \n",
